// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Multi-Org Test - Access Control on Remote Data with Event Store: loanDetails Org1 - query loan 5a success with loanDetails 5a 1`] = `
Object {
  "comment": Any<String>,
  "description": "Org2 Loan 5a",
  "details": Array [
    Object {
      "approvedAmt": null,
      "comment": "Org2 LoanDetails 5a for Org1",
      "contact": Object {
        "email": "c0001@fake.it",
        "name": "Contact 5",
        "phone": "555-0001",
        "salutation": null,
        "title": null,
      },
      "currency": "HKD",
      "loanType": null,
      "requestedAmt": 41.9,
      "requester": Object {
        "name": "Loan Requester 5a",
        "registration": "BR1234567XXX1",
        "type": null,
      },
      "startDate": "1574846420901",
      "tenor": 51,
    },
  ],
  "documents": Array [
    Object {
      "contents": Array [
        Object {
          "content": Object {
            "body": "{ \\"message\\": \\"Org1 docContents 1\\" }",
          },
        },
      ],
      "reference": "REF-ORG1-DOC-1",
      "status": 0,
      "title": "Org1 Document 1",
    },
  ],
  "ownerId": "USER_ORG2",
  "reference": "REF-ORG2-LOAN-5a",
  "status": 0,
}
`;

exports[`Multi-Org Test - Access Control on Remote Data with Event Store: loanDetails Org1 - query loan 5d success without loanDetails 1`] = `
Object {
  "comment": Any<String>,
  "description": "Org2 Loan 5d",
  "details": Array [],
  "documents": Array [
    Object {
      "contents": Array [
        Object {
          "content": Object {
            "body": "{ \\"message\\": \\"Org1 docContents 1\\" }",
          },
        },
      ],
      "reference": "REF-ORG1-DOC-1",
      "status": 0,
      "title": "Org1 Document 1",
    },
  ],
  "ownerId": "USER_ORG2",
  "reference": "REF-ORG2-LOAN-5d",
  "status": 0,
}
`;

exports[`Multi-Org Test - Access Control on Remote Data with Event Store: loanDetails Org2 - query loan 5a with loanDetails 5a  1`] = `
Object {
  "comment": Any<String>,
  "description": "Org2 Loan 5a",
  "details": Array [
    Object {
      "approvedAmt": null,
      "comment": "Org2 LoanDetails 5a for Org1",
      "contact": Object {
        "email": "c0001@fake.it",
        "name": "Contact 5",
        "phone": "555-0001",
        "salutation": null,
        "title": null,
      },
      "currency": "HKD",
      "loanType": null,
      "requestedAmt": 41.9,
      "requester": Object {
        "name": "Loan Requester 5a",
        "registration": "BR1234567XXX1",
        "type": null,
      },
      "startDate": "1574846420901",
      "tenor": 51,
    },
  ],
  "documents": Array [
    Object {
      "contents": Array [
        Object {
          "content": Object {
            "body": "{ \\"message\\": \\"Org1 docContents 1\\" }",
          },
        },
      ],
      "reference": "REF-ORG1-DOC-1",
      "status": 0,
      "title": "Org1 Document 1",
    },
  ],
  "ownerId": "USER_ORG2",
  "reference": "REF-ORG2-LOAN-5a",
  "status": 0,
}
`;

exports[`Multi-Org Test - Access Control on Remote Data with Event Store: loanDetails Org2 - query loan 5d with loanDetails 5d  1`] = `
Object {
  "comment": Any<String>,
  "description": "Org2 Loan 5d",
  "details": Array [
    Object {
      "approvedAmt": null,
      "comment": "Org2 LoanDetails 5d for Org2",
      "contact": Object {
        "email": "c0001@fake.it",
        "name": "Contact 5d",
        "phone": "555-0001",
        "salutation": null,
        "title": null,
      },
      "currency": "HKD",
      "loanType": null,
      "requestedAmt": 41.9,
      "requester": Object {
        "name": "Loan Requester 5d",
        "registration": "BR1234567XXX1",
        "type": null,
      },
      "startDate": "1574846420901",
      "tenor": 51,
    },
  ],
  "documents": Array [
    Object {
      "contents": Array [],
      "reference": "REF-ORG1-DOC-1",
      "status": 0,
      "title": "Org1 Document 1",
    },
  ],
  "ownerId": "USER_ORG2",
  "reference": "REF-ORG2-LOAN-5d",
  "status": 0,
}
`;

exports[`Multi-Org Test - Query Loans query document 1a 1`] = `
Object {
  "documentId": Any<String>,
  "loan": Object {
    "description": "Org1 Loan 1",
    "loanId": Any<String>,
    "ownerId": "USER_ORG1",
    "reference": "REF-ORG1-LOAN-1",
    "status": 0,
    "timestamp": Any<String>,
  },
  "loanId": Any<String>,
  "ownerId": "USER_ORG1",
  "reference": "REF-ORG1-DOC-1",
  "status": 0,
  "timestamp": Any<String>,
  "title": "Org1 Document 1CHANGED",
}
`;

exports[`Multi-Org Test - Query Loans query document 2b 1`] = `
Object {
  "documentId": Any<String>,
  "loan": Object {
    "description": "Org2 Loan 2",
    "loanId": Any<String>,
    "ownerId": "USER_ORG2",
    "reference": "REF-ORG2-LOAN-2",
    "status": 0,
    "timestamp": Any<String>,
  },
  "loanId": Any<String>,
  "ownerId": "USER_ORG2",
  "reference": "REF-ORG2-DOC-2",
  "status": 0,
  "timestamp": Any<String>,
  "title": "Org2 Document 2",
}
`;

exports[`Multi-Org Test - Query Loans query document 2b commits 1`] = `
Array [
  Object {
    "entityName": "document",
    "events": Array [
      Object {
        "type": "DocumentCreated",
      },
      Object {
        "type": "DocumentReferenceDefined",
      },
      Object {
        "type": "DocumentLoanIdDefined",
      },
      Object {
        "type": "DocumentTitleDefined",
      },
    ],
    "mspId": "Org2MSP",
    "version": 0,
  },
  Object {
    "entityName": "document",
    "events": Array [
      Object {
        "type": "PrivateDataTracked",
      },
    ],
    "mspId": "Org1MSP",
    "version": 0,
  },
]
`;

exports[`Multi-Org Test - Query Loans query loan 1 1`] = `
Object {
  "comment": Any<String>,
  "description": "Org1 Loan 1",
  "details": Array [
    Object {
      "approvedAmt": null,
      "comment": "Org2 LoanDetails 1 for Org1",
      "contact": Object {
        "email": "c0001@fake.it",
        "name": "Contact 1",
        "phone": "555-0001",
        "salutation": null,
        "title": null,
      },
      "currency": "HKD",
      "loanType": null,
      "requestedAmt": 41.9,
      "requester": Object {
        "name": "Loan Requester 1",
        "registration": "BR1234567XXX1",
        "type": null,
      },
      "startDate": "1574846420901",
      "tenor": 51,
    },
  ],
  "documents": Array [
    Object {
      "contents": Array [
        Object {
          "content": Object {
            "body": "{ \\"message\\": \\"Org1 docContents 1CHANGED\\" }",
          },
        },
      ],
      "reference": "REF-ORG1-DOC-1",
      "status": 0,
      "title": "Org1 Document 1CHANGED",
    },
    Object {
      "contents": Array [
        Object {
          "content": Object {
            "format": "PDF",
            "link": "http://fake.it/docs/org1DocContents-2.pdf",
          },
        },
      ],
      "reference": "REF-ORG1-DOC-2",
      "status": 0,
      "title": "Org1 Document 2",
    },
  ],
  "ownerId": "USER_ORG1",
  "reference": "REF-ORG1-LOAN-1",
  "status": 0,
}
`;

exports[`Multi-Org Test - Query Loans query loan 1 commits 1`] = `
Array [
  Object {
    "entityName": "loan",
    "events": Array [
      Object {
        "type": "LoanApplied",
      },
      Object {
        "type": "LoanReferenceDefined",
      },
      Object {
        "type": "LoanDescriptionDefined",
      },
    ],
    "mspId": "Org1MSP",
    "version": 0,
  },
  Object {
    "entityName": "loan",
    "events": Array [
      Object {
        "type": "LoanCommentDefined",
      },
    ],
    "mspId": "Org1MSP",
    "version": 1,
  },
  Object {
    "entityName": "loan",
    "events": Array [
      Object {
        "type": "PrivateDataTracked",
      },
    ],
    "mspId": "Org2MSP",
    "version": 0,
  },
]
`;

exports[`Multi-Org Test - Query Loans query loan 2 1`] = `
Object {
  "comment": Any<String>,
  "description": "Org2 Loan 2",
  "details": Array [
    Object {
      "approvedAmt": null,
      "comment": "Org2 LoanDetails 2",
      "contact": Object {
        "email": "c0002@fake.it",
        "name": "Contact 2",
        "phone": "555-0002",
        "salutation": null,
        "title": null,
      },
      "currency": "HKD",
      "loanType": null,
      "requestedAmt": 42.9,
      "requester": Object {
        "name": "Loan Requester 2",
        "registration": "BR1234567XXX2",
        "type": null,
      },
      "startDate": "1574846420902",
      "tenor": 52,
    },
  ],
  "documents": Array [
    Object {
      "contents": Array [
        Object {
          "content": Object {
            "body": "{ \\"message\\": \\"Org1 docContents 1 for Org2\\" }",
          },
        },
      ],
      "reference": "REF-ORG2-DOC-1",
      "status": 0,
      "title": "Org2 Document 1",
    },
    Object {
      "contents": Array [],
      "reference": "REF-ORG2-DOC-2",
      "status": 0,
      "title": "Org2 Document 2",
    },
  ],
  "ownerId": "USER_ORG2",
  "reference": "REF-ORG2-LOAN-2",
  "status": 0,
}
`;
